proyecto1/src/objects/Audit_products__c.object
<CustomObject>
    <fields>
        <fullName>Facing_lost__c</fullName>
        <label>Facing lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facings_found__c</fullName>
        <label>Facings found</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out_of_Stock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Audit products</relationshipLabel>
        <relationshipName>Audit_products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_audit__c</fullName>
        <label>Retail audit</label>
        <referenceTo>Retail_audit__c</referenceTo>
        <relationshipLabel>Audit products</relationshipLabel>
        <relationshipName>Audit_products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Audit product</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Audit products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>